sa-frontend/k8s-react-service.yml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
  namespace: k8s
  labels:
    app: react-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30001
  selector:
    app: react-app
